# ByteLiteSysDetect

./: .gitignore  ByteLiteSysDetect.cpp  ByteLiteSysDetect.h  CMakeLists.txt  README.md
include/ByteLite/: ByteLiteSysDetect.h
src/ByteLiteSysDetect/: ByteLiteSysDetect.cpp
tests/: test_main.cpp
